force-app/src/objects/OrderApi__Assignment_Role__c.object
<CustomObject>
    <description>Configure custom roles for Contacts to be assigned to against &quot;Assignable&quot; Items.</description>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional description for the Assignment Role.</description>
        <inlineHelpText>Optional description for the Assignment Role.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Roles is considered &quot;Active&quot;.</description>
        <inlineHelpText>When checked, the Contact is considered &quot;Active&quot;.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Roles is considered as&quot;Default Assignment Role&quot;.</description>
        <inlineHelpText>When checked, the Roles is considered as&quot;Default Assignment Role&quot;.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will be considered a &quot;Primary Contact&quot; for the &quot;Assigned To Record&quot;. Defaults unchecked.</description>
        <inlineHelpText>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will be considered a &quot;Primary Contact&quot; for the &quot;Assigned To Record&quot;. Defaults unchecked.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipName>Assignment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receives_Email_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will receive notifications related to the &quot;Assigned To Record&quot; by default. Defaults unchecked.</description>
        <inlineHelpText>When checked, any Contact &quot;Assignment&quot; linked to the Assignment Role will receive notifications related to the &quot;Assigned To Record&quot; by default. Defaults unchecked.</inlineHelpText>
        <label>Receives Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment Role</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>